# mcp-lancedb

./: .coverage  .coverage.Khaldouns-Mac-mini.local.14192.XFEiMgax  .gitignore  DEVELOPMENT.md  QA_TESTING_GUIDE.md  README.md  TEST_COVERAGE_REPORT.md  lancedb_mcp.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.cursor/rules/: architecture.mdc  development.mdc  index.mdc  testing.mdc  troubleshooting.mdc
src/mcp_lancedb/: __init__.py  cli.py  server.py
src/mcp_lancedb/core/: __init__.py  config.py  connection.py  logger.py  optimization.py  schemas.py
src/mcp_lancedb/operations/: __init__.py  document_management.py  search_operations.py  table_management.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_full_workflow.py  test_table_persistence.py
tests/unit/: __init__.py  test_cli.py  test_connection.py  test_document_management.py  test_init.py  test_optimization.py  test_schemas.py  test_search_operations.py  test_server.py  test_table_management.py
