[project]
name = "lancdb-mcp"
version = "0.1.0"
description = "Production-ready MCP server implementation for LanceDB integration with Claude"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Khaldoon Sinjab", email = "sinjab@gmail.com"}
]
dependencies = [
    "lancedb>=0.23.0",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "click>=8.0",
]

[project.scripts]
mcp-lancedb = "mcp_lancedb.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=6.2.0",
    "black>=24.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_lancedb"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
